--- a/css/styles.css
+++ b/css/styles.css
@@ -98,23 +98,19 @@ img {
   padding: 24px 0;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
-.nav-link-active {
-  color: #404bbf;
-}
-
-.nav-link::after {
-  content: "";
+.nav-link-active::after {
+  content: '';
   display: block;
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: #404BBF;
+  background-color: #404bbf;
   position: absolute;
   bottom: -1px;
   left: 0;
+  color: #404bbf;
 }
 
 .nav-link:hover,
@@ -160,6 +156,7 @@ img {
   background-size: cover;
   background-position: center;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -281,6 +278,10 @@ img {
   margin-bottom: 8px;
 }
 
+.advantage-text .text-description {
+  margin-bottom: 0;
+}
+
 .text {
   font-family: inherit;
   font-size: 16px;
@@ -364,7 +365,7 @@ img {
   overflow: hidden;
 }
 
-.overlay-wraper:hover .text-overlay {
+.portfolio-item:hover .text-overlay {
   transform: translateY(0);
 }
 
@@ -427,4 +428,156 @@ img {
 
 .footer-social-links .social-links {
   gap: 16px;
+}
+
+/*Modal*/
+
+.backdrop {
+  position: fixed;
+  inset: 0;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fcfcfc;
+  opacity: 1;
+  visibility: visible;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 72px 24px 24px 24px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  transform: translateX(-50%) translateY(-50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  max-width: 408px;
+  max-height: 584px;
+  overflow-y: auto;
+}
+
+.modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-icon:hover,
+.modal-close:hover {
+  fill: #404bbf;
+  background-color: #404bbf;
+}
+
+.modal-close-icon:hover {
+  fill: #e7e9fc;
+}
+
+.modal-wrapper {
+  margin-bottom: 8px;
+}
+
+.modal-title {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5em; /* 150% */
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
+  display: block;
+}
+
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  font-family: Roboto;
+  font-size: 12px;
+  line-height: 1.17em; /* 116.667% */
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border-color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding-left: 38px;
+  outline: none;
+  outline: transparent;
+
+}
+
+.modal-input:focus + .modal-icon {
+ fill: #4d5ae5;
+}
+
+.modal-input:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-icon-wrapper {
+  position: relative;
+}
+
+.modal-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2e2f42;
+}
+
+.modal-textarea {
+  width: 100%;
+  border-radius: 4px;
+  border-color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  min-height: 120px;
+  resize: none;
+  font-size: 12px;
+  line-height: 1.17em; /* 116.667% */
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.field-comment {
+  margin-bottom: 16px;
+}
+
+.modal-icon-chek {
+  stroke-width: 1px;
+  stroke: rgba(46, 47, 66, 0.40)
+  fill: #fcfcfc
 }
