--- a/css/styles.css
+++ b/css/styles.css
@@ -576,8 +576,27 @@ img {
   margin-bottom: 16px;
 }
 
-.modal-icon-chek {
-  stroke-width: 1px;
-  stroke: rgba(46, 47, 66, 0.40)
-  fill: #fcfcfc
+.modal-check-box {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.modal-check-text {
+  font-size: 12px;
+  line-height: 1.17em; /* 116.667% */
+  letter-spacing: 0.04em;
+}
+
+.modal-link-text {
+  text-decoration-line: underline;
+  color: #4d5ae5;
 }
