--- a/css/styles.css
+++ b/css/styles.css
@@ -461,8 +461,18 @@ img {
   transform: translateX(-50%) translateY(-50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   max-width: 408px;
-  max-height: 584px;
+  min-height: 584px;
   overflow-y: auto;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(0);
 }
 
 .modal-close {
@@ -530,16 +540,15 @@ img {
   border-color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   padding-left: 38px;
-  outline: none;
   outline: transparent;
-
 }
 
 .modal-input:focus + .modal-icon {
- fill: #4d5ae5;
+  fill: #4d5ae5;
 }
 
-.modal-input:focus {
+.modal-input:focus,
+.modal-textarea:focus {
   border-color: #4d5ae5;
 }
 
@@ -586,7 +595,9 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
@@ -594,9 +605,105 @@ img {
   font-size: 12px;
   line-height: 1.17em; /* 116.667% */
   letter-spacing: 0.04em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-link-text {
   text-decoration-line: underline;
   color: #4d5ae5;
+  margin-left: 4px;
+}
+
+.modal-check-input:checked + .modal-check-text .modal-check-box {
+  background-color: #404bbf;
+  border: none;
+  fill: #4d5ae5;
+}
+
+.modal-button-submit {
+  height: 56px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  background-color: #4d5ae5;
+  color: #fff;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  display: block;
+  padding: 16px 32px;
+  align-items: flex-start;
+  gap: 10px;
+  margin: 24px auto 0;
+  min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-wrapper {
+  margin-left: 80px;
+}
+.footer-subscribe-text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5em; /* 150% */
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-subscribe-input {
+  min-width: 264px;
+  min-height: 40px;
+  padding-left: 16px;
+  border-radius: 4px;
+  outline: none;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  font-size: 12px;
+  line-height: 2em; /* 200% */
+  letter-spacing: 0.04em;
+}
+
+.footer-subscribe-input::placeholder {
+  color: #fff;
+}
+
+.footer-subscribe-button {
+  border-radius: 4px;
+  background: #4d5ae5;
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5em; /* 150% */
+  letter-spacing: 0.02em;
+  color: #fff;
+  border: none;
+}
+
+.footer-subscribe-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+  background-color: #404bbf;
 }
